<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/paired"
        android:layout_margin="15dp" />
    
    <ListView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/pairedDevicesList" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:text="@string/discovered"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/discoveredList" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cancelBtn"
        android:background="@drawable/gradient_animation"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:fontFamily="@font/dosis"
        android:textStyle="bold"/>


</LinearLayout>